[gd_scene load_steps=5 format=3 uid="uid://7tjt5gy3dqh7"]

[ext_resource type="Script" path="res://addons/cognite/editor/graphnodes/modus.gd" id="1_dtqp6"]
[ext_resource type="Texture2D" uid="uid://eicbj8vr3pfr" path="res://addons/cognite/assets/Clear.svg" id="2_f22u4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icug0"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.188235, 0.298039, 0.34902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4pft"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.188235, 0.298039, 0.34902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="GraphNode" type="GraphNode"]
offset_right = 9.0
offset_bottom = 55.0
theme_override_styles/titlebar = SubResource("StyleBoxFlat_icug0")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_r4pft")
title = "State"
slot/0/left_enabled = false
slot/0/left_type = 1
slot/0/left_color = Color(0.733333, 0.733333, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_dtqp6")

[node name="states" type="OptionButton" parent="."]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "Default"
popup/item_0/id = 0

[node name="Control" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "[empty]"
text_overrun_behavior = 3

[node name="Button2" type="Button" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = ExtResource("2_f22u4")
expand_icon = true

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
